--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-persist": "^2.1.0",
     "node-schedule": "^1.2.4",
     "request": "^2.81.0",
+    "socket.io": "^2.0.3",
     "swagger-jsdoc": "^1.9.5",
     "validate-fields": "^3.7.1"
   },
