--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "method-override": "^2.3.9",
     "multer": "^1.3.0",
     "mysql2": "^1.3.5",
-    "node-persist": "^2.1.0",
     "node-schedule": "^1.2.4",
+    "redis": "^2.8.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
     "swagger-jsdoc": "^1.9.5",
+    "useragent": "^2.2.1",
     "validate-fields": "^3.7.1"
   },
   "devDependencies": {
