--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "knex": "^0.13.0",
     "lwip": "0.0.9",
     "method-override": "^2.3.9",
+    "moment": "^2.19.2",
     "multer": "^1.3.0",
-    "mysql2": "^1.3.5",
+    "mysql2": "^1.5.0",
     "node-schedule": "^1.2.4",
     "redis": "^2.8.0",
     "request": "^2.81.0",
