--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "multer": "^1.3.0",
     "mysql2": "^1.5.2",
     "node-schedule": "^1.3.0",
+    "nodemailer": "^4.6.2",
+    "nodemailer-mailgun-transport": "^1.3.6",
     "redis": "^2.8.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
