--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "dotenv": "^5.0.1",
+    "email-templates": "^3.5.1",
     "exceljs": "^0.8.5",
     "express": "^4.15.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.14.4",
     "method-override": "^2.3.9",
@@ -30,6 +33,7 @@
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.2",
     "nodemailer-mailgun-transport": "^1.3.6",
+    "pug": "^2.0.1",
     "redis": "^2.8.0",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
