updated the env file

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DB_DATABASE=test
 DB_PORT=3306
 
 JWT_SECRET=test
+FSM_SERVER_KEY=***************************************
 
 MAIL_DRIVER=smtp
 MAIL_HOST=paul.working.com
