--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Mr.Working Server Application",
   "main": "index.js",
+  "bin": {
+    "mrworking": "./commands/index.js"
+  },
   "scripts": {
     "test": "jest"
   },
@@ -18,6 +21,8 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "chalk": "^2.3.2",
+    "commander": "^2.15.1",
     "cors": "^2.8.3",
     "dotenv": "^5.0.1",
     "email-templates": "^3.5.1",
