Set reconnection fee from the customer tariff | Avoid processing rows where the customer doesn't belong to the undertaking specified in the file.

--- a/api.yml
+++ b/api.yml
@@ -203,6 +203,9 @@ definitions:
       gender:
         type: string
         enum: ['M', 'F', 'O']
+      avatar:
+        type: file
+        description: The user profile image
 
 
   postUserOutput:
