--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
+NODE_ENV=development
+PORT=9003
+APP_URL=http://85.25.103.81
+APP_WEB_URL=http://85.25.103.81/mrworking-web/public
+
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=test1
 DB_DATABASE=test
 DB_PORT=3306
 
-JWT_SECRET=test
-FSM_SERVER_KEY=***************************************
+JWT_SECRET=everyThingMustBeSecret
+FSM_SERVER_KEY=everyThingMustBeSecret
+GOOGLE_API_KEY=everyThingMustBeSecret
+AWS_ACCESS_KEY_ID=everyThingMustBeSecret
+SECRET_ACCESS_KEY_ID=everyThingMustBeSecret
 
 MAIL_DRIVER=smtp
 MAIL_HOST=paul.working.com
@@ -13,6 +21,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=afafdfafd
 MAIL_ENCRYPTION=null
+MAIL_FROM=iforce@ttttt.com
 
 
 PM_BASE_URL=http://mypm.com
@@ -20,3 +29,10 @@ PM_CLIENT_ID=testLar
 PM_CLIENT_SECRET=mySecret
 PM_WORK_SPACE=workflow
 PM_API_VERSION=1.0
+PM_API_VERSION=1.0
+PM_ADMIN=
+PM_PASS=
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
